manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: extproc
  labels:
    app: extproc
    service: extproc
spec:
  ports:
  - port: 9090
    name: grpc
  selector:
    app: extproc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extproc
  labels:
    app: extproc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extproc
      version: v1
  template:
    metadata:
      labels:
        app: extproc
        version: v1
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: extproc
        env:
        - name: RUST_LOG
          value: "trace"
        image: bohanon/ext_proc-server:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
